--- a/index.html
+++ b/index.html
@@ -2,41 +2,147 @@
 <html lang="vi">
 <head>
 <meta charset="UTF-8" />
-<title>Upload & Xem thử Website</title>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Test Website</title>
 <style>
-  body { font-family: Arial, sans-serif; margin: 20px; }
-  h2 { color: #2980b9; }
+  body {
+    font-family: Arial, sans-serif;
+    margin: 20px;
+    background: linear-gradient(135deg, #d7e8ff, #daf5d7); /* xanh dương nhạt và xanh lá */
+    color: #0b3f34;
+  }
+  h2 {
+    color: #074d7d;
+    text-align: center;
+  }
+  #uploadUI {
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 12px;
+    padding: 20px;
+    max-width: 360px;
+    margin: 0 auto;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  }
+  input[type="file"] {
+    display: block;
+    margin: 20px auto 10px auto;
+    padding: 10px;
+    width: 80%;
+    background-color: #7a4acd; /* tím */
+    color: white;
+    border: none;
+    border-radius: 8px;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  #fileName {
+    text-align: center;
+    font-style: italic;
+    margin-bottom: 14px;
+    color: #3a6c33; /* xanh lá đậm */
+  }
+  #viewWebBtn {
+    display: block;
+    background-color: #7a4acd; /* tím */
+    color: white;
+    border: none;
+    border-radius: 8px;
+    padding: 10px 20px;
+    font-weight: bold;
+    margin: 0 auto;
+    cursor: pointer;
+    font-size: 16px;
+    max-width: 120px;
+  }
+  #previewPage {
+    display: none;
+    position: relative;
+    max-width: 100vw;
+    max-height: 92vh;
+    margin: 0 auto;
+    box-shadow: 0 0 24px rgba(0,0,0,0.15);
+    border-radius: 8px;
+  }
   #previewFrame {
-    width: 100%; 
-    height: 600px; 
-    border: 1px solid #ccc; 
-    margin-top: 10px;
+    width: 100vw;
+    height: 90vh;
+    border: none;
+    border-radius: 8px;
+  }
+  #closePreviewBtn {
+    position: fixed;
+    top: 18px;
+    right: 20px;
+    z-index: 10;
+    background-color: #3a6c33; /* xanh lá đậm */
+    color: white;
+    border: none;
+    border-radius: 10px;
+    padding: 8px 18px;
+    font-weight: bold;
+    cursor: pointer;
+    box-shadow: 0 0 12px rgba(58, 108, 51, 0.7);
+    user-select: none;
   }
 </style>
 </head>
 <body>
 
-<h2>Tải file HTML lên và xem thử website</h2>
-<input type="file" id="fileInput" accept=".html,.htm" />
-<p><i>Chỉ hỗ trợ file HTML tĩnh (không có server-side code).</i></p>
+<h2>Upload file HTML & Xem Web</h2>
 
-<iframe id="previewFrame"></iframe>
+<div id="uploadUI">
+  <input type="file" id="fileInput" accept=".html,.htm" />
+  <div id="fileName">Chưa chọn file</div>
+  <button id="viewWebBtn" disabled>Xem Web</button>
+</div>
+
+<div id="previewPage">
+  <button id="closePreviewBtn">Đóng</button>
+  <iframe id="previewFrame" sandbox="allow-same-origin allow-scripts"></iframe>
+</div>
 
 <script>
   const fileInput = document.getElementById('fileInput');
+  const fileNameDisplay = document.getElementById('fileName');
+  const viewWebBtn = document.getElementById('viewWebBtn');
+  const uploadUI = document.getElementById('uploadUI');
+  const previewPage = document.getElementById('previewPage');
   const previewFrame = document.getElementById('previewFrame');
+  const closePreviewBtn = document.getElementById('closePreviewBtn');
+
+  let fileContent = "";
 
   fileInput.addEventListener('change', () => {
     const file = fileInput.files[0];
-    if (!file) {
-      previewFrame.srcdoc = '';
-      return;
+    if (file) {
+      fileNameDisplay.textContent = `File đã chọn: ${file.name}`;
+      viewWebBtn.disabled = false;
+
+      // Đọc nội dung file HTML
+      const reader = new FileReader();
+      reader.onload = e => {
+        fileContent = e.target.result;
+      };
+      reader.readAsText(file);
+    } else {
+      fileNameDisplay.textContent = "Chưa chọn file";
+      viewWebBtn.disabled = true;
+      fileContent = "";
     }
-    const reader = new FileReader();
-    reader.onload = e => {
-      previewFrame.srcdoc = e.target.result;
-    };
-    reader.readAsText(file);
+  });
+
+  viewWebBtn.addEventListener('click', () => {
+    // Hiển thị preview web, ẩn UI upload
+    previewFrame.srcdoc = fileContent;
+    uploadUI.style.display = 'none';
+    previewPage.style.display = 'block';
+  });
+
+  closePreviewBtn.addEventListener('click', () => {
+    // Đóng preview, hiện lại UI upload
+    previewFrame.srcdoc = '';
+    uploadUI.style.display = 'block';
+    previewPage.style.display = 'none';
   });
 </script>
 
