--- a/index.html
+++ b/index.html
@@ -8,27 +8,65 @@
   body {
     font-family: Arial, sans-serif;
     margin: 20px;
-    background: linear-gradient(135deg, #d7e8ff, #daf5d7); /* xanh dương nhạt và xanh lá */
+    background: linear-gradient(135deg, #d7e8ff, #daf5d7);
     color: #0b3f34;
   }
   h2 {
     color: #074d7d;
     text-align: center;
   }
+  .tabContainer {
+    max-width: 480px;
+    margin: 0 auto 30px auto;
+    background: rgba(255 255 255 / 0.85);
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgb(0 0 0 / 0.1);
+    padding: 15px 20px;
+  }
+  .tabs {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 15px;
+  }
+  .tabBtn {
+    padding: 10px 25px;
+    border: none;
+    border-radius: 12px;
+    font-weight: bold;
+    cursor: pointer;
+    background: #7a4acd;
+    color: white;
+    transition: background-color 0.3s ease;
+  }
+  .tabBtn.active {
+    background: #3a6c33;
+  }
+  .tabContent {
+    display: block;
+    position: absolute;
+    left: -9999px;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+  .tabContent.active {
+    position: static;
+    left: auto;
+    visibility: visible;
+    opacity: 1;
+  }
   #uploadUI {
     background-color: rgba(255, 255, 255, 0.8);
     border-radius: 12px;
     padding: 20px;
-    max-width: 360px;
-    margin: 0 auto;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   }
   input[type="file"] {
     display: block;
     margin: 20px auto 10px auto;
     padding: 10px;
     width: 80%;
-    background-color: #7a4acd; /* tím */
+    background-color: #3a6c33;
     color: white;
     border: none;
     border-radius: 8px;
@@ -39,11 +77,12 @@
     text-align: center;
     font-style: italic;
     margin-bottom: 14px;
-    color: #3a6c33; /* xanh lá đậm */
+    color: #3a6c33;
+    user-select: none;
   }
   #viewWebBtn {
     display: block;
-    background-color: #7a4acd; /* tím */
+    background-color: #7a4acd;
     color: white;
     border: none;
     border-radius: 8px;
@@ -74,7 +113,7 @@
     top: 18px;
     right: 20px;
     z-index: 10;
-    background-color: #3a6c33; /* xanh lá đậm */
+    background-color: #3a6c33;
     color: white;
     border: none;
     border-radius: 10px;
@@ -84,16 +123,79 @@
     box-shadow: 0 0 12px rgba(58, 108, 51, 0.7);
     user-select: none;
   }
+  #codeInputArea {
+    width: 100%;
+    height: 250px;
+    font-family: monospace;
+    font-size: 14px;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    padding: 10px;
+    resize: vertical;
+    box-sizing: border-box;
+  }
+
+  #fileNameInput {
+    width: 310px; /* tăng rộng hơn */
+    margin-top: 10px;
+    padding: 8px;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    font-size: 16px;
+    box-sizing: border-box;
+    display: inline-block;
+    vertical-align: middle;
+  }
+
+  #createFileBtn, #viewCodeWebBtn {
+    margin-top: 15px;
+    padding: 10px 15px;
+    font-weight: bold;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 8px;
+    border: none;
+    display: inline-block;
+    vertical-align: middle;
+  }
+  #createFileBtn {
+    background-color: #3a6c33;
+    color: white;
+    max-width: 120px;
+    margin-right: 10px;
+  }
+  #viewCodeWebBtn {
+    background-color: #7a4acd;
+    color: white;
+    max-width: 120px;
+  }
 </style>
 </head>
 <body>
 
-<h2>Upload file HTML & Xem Web</h2>
+<h2>📖 Test Website</h2>
 
-<div id="uploadUI">
-  <input type="file" id="fileInput" accept=".html,.htm" />
-  <div id="fileName">Chưa chọn file</div>
-  <button id="viewWebBtn" disabled>Xem Web</button>
+<div class="tabContainer">
+  <div class="tabs">
+    <button class="tabBtn active" data-tab="inputTab">Nhập dữ liệu</button>
+    <button class="tabBtn" data-tab="uploadTab">Tab Input File</button>
+  </div>
+
+  <div id="inputTab" class="tabContent active">
+    <textarea id="codeInputArea" placeholder="Nhập code HTML tại đây..."></textarea>
+    <br />
+    <button id="createFileBtn">Tạo file</button>
+    <input type="text" id="fileNameInput" placeholder="Tên file (ví dụ: index.html)" />
+    <button id="viewCodeWebBtn">Xem web</button>
+  </div>
+
+  <div id="uploadTab" class="tabContent">
+    <div id="uploadUI">
+      <input type="file" id="fileInput" accept=".html,.htm" />
+      <div id="fileName">Chưa chọn file</div>
+      <button id="viewWebBtn" disabled>Xem Web</button>
+    </div>
+  </div>
 </div>
 
 <div id="previewPage">
@@ -102,6 +204,21 @@
 </div>
 
 <script>
+  // Tab chuyển đổi logic
+  const tabButtons = document.querySelectorAll('.tabBtn');
+  const tabContents = document.querySelectorAll('.tabContent');
+  tabButtons.forEach(btn => {
+    btn.addEventListener('click', () => {
+      tabButtons.forEach(b => b.classList.remove('active'));
+      btn.classList.add('active');
+      const tabId = btn.getAttribute('data-tab');
+      tabContents.forEach(tc => {
+        tc.classList.toggle('active', tc.id === tabId);
+      });
+    });
+  });
+
+  // Upload tab logic
   const fileInput = document.getElementById('fileInput');
   const fileNameDisplay = document.getElementById('fileName');
   const viewWebBtn = document.getElementById('viewWebBtn');
@@ -117,8 +234,6 @@
     if (file) {
       fileNameDisplay.textContent = `File đã chọn: ${file.name}`;
       viewWebBtn.disabled = false;
-
-      // Đọc nội dung file HTML
       const reader = new FileReader();
       reader.onload = e => {
         fileContent = e.target.result;
@@ -132,17 +247,78 @@
   });
 
   viewWebBtn.addEventListener('click', () => {
-    // Hiển thị preview web, ẩn UI upload
     previewFrame.srcdoc = fileContent;
     uploadUI.style.display = 'none';
+    document.getElementById('inputTab').style.visibility = 'hidden';
+    document.getElementById('inputTab').style.position = 'absolute';
     previewPage.style.display = 'block';
+    // Cuộn đến giữa iframe
+    setTimeout(() => {
+      previewPage.scrollIntoView({behavior: 'smooth', block: 'center'});
+    }, 100);
   });
 
   closePreviewBtn.addEventListener('click', () => {
-    // Đóng preview, hiện lại UI upload
     previewFrame.srcdoc = '';
     uploadUI.style.display = 'block';
+    const inputTabEl = document.getElementById('inputTab');
+    inputTabEl.style.visibility = 'visible';
+    inputTabEl.style.position = 'static';
     previewPage.style.display = 'none';
+    fileInput.value = "";
+    fileNameDisplay.textContent = "Chưa chọn file";
+    viewWebBtn.disabled = true;
+  });
+
+  // Nhập dữ liệu tab logic
+  const codeInputArea = document.getElementById('codeInputArea');
+  const fileNameInput = document.getElementById('fileNameInput');
+  const createFileBtn = document.getElementById('createFileBtn');
+  const viewCodeWebBtn = document.getElementById('viewCodeWebBtn');
+  const inputTab = document.getElementById('inputTab');
+
+  createFileBtn.addEventListener('click', () => {
+    const code = codeInputArea.value.trim();
+    let fileName = fileNameInput.value.trim();
+
+    if (!code) {
+      alert('Vui lòng nhập code HTML!');
+      return;
+    }
+    if (!fileName) {
+      alert('Vui lòng nhập tên file!');
+      return;
+    }
+    if (!fileName.toLowerCase().endsWith('.html')) {
+      fileName += '.html';
+    }
+
+    const blob = new Blob([code], {type: 'text/html'});
+    const url = URL.createObjectURL(blob);
+
+    const a = document.createElement('a');
+    a.href = url;
+    a.download = fileName;
+    a.click();
+
+    URL.revokeObjectURL(url);
+  });
+
+  viewCodeWebBtn.addEventListener('click', () => {
+    const code = codeInputArea.value.trim();
+    if (!code) {
+      alert('Vui lòng nhập code HTML!');
+      return;
+    }
+    previewFrame.srcdoc = code;
+    uploadUI.style.display = 'none';
+    inputTab.style.visibility = 'hidden';
+    inputTab.style.position = 'absolute';
+    previewPage.style.display = 'block';
+
+    setTimeout(() => {
+      previewPage.scrollIntoView({behavior: 'smooth', block: 'center'});
+    }, 100);
   });
 </script>
 
